<?xml version="1.0"?>
<package format="3">
  <name>square_formation</name>
  <version>0.0.1</version>
  <description>Decentralized, synchronized square-formation controllers for multiple TurtleBots</description>
  <maintainer email="example@example.com">Maintainer</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf-transformations</exec_depend>
</package>
