<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>multi_room</name>
  <version>0.0.1</version>
  <description>Multi-room robot navigation with Nav2 and SLAM Toolbox</description>
  <maintainer email="elex@example.com">elex</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>ros2launch</depend>
  <depend>turtlebot3_gazebo</depend>
  <depend>navigation2</depend>
  <depend>nav2_bringup</depend>
  <depend>slam_toolbox</depend>
  <depend>nav2_core</depend>
  <depend>nav2_common</depend>
  <depend>nav2_map_server</depend>



  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

